examples/test/testpolicy12041.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12041
  namespace: namespace259
spec:
  podSelector:
    matchLabels:
      key1: value32
      key38: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value26
          key37: value2
      podSelector:
        matchLabels:
          key19: value33
